# ebm

./: .envrc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  README.md  manifest.scm  pyproject.toml  pytest.ini  requirements.txt  setup-dev.sh  setup.py  sitecustomize.py
.github/workflows/: ci.yml
ebm/: __init__.py
ebm/core/: __init__.py  config.py  device.py  logging.py  logging_utils.py  registry.py  types.py  types_.py
ebm/inference/: __init__.py  partition.py
ebm/models/: __init__.py  base.py
ebm/models/rbm/: __init__.py  base.py  bernoulli.py  gaussian.py
ebm/rbm/: __init__.py  base.py  utils.py
ebm/rbm/model/: __init__.py  base.py  brbm.py  cbrbm.py
ebm/rbm/sampler/: __init__.py  base.py  cd.py  pcd.py
ebm/sampling/: __init__.py  base.py  deterministic.py  gradient.py  mcmc.py
ebm/training/: __init__.py  callbacks.py  metrics.py  trainer.py
ebm/utils/: __init__.py  data.py  initialization.py  tensor.py  visualization.py
examples/: rbm-mnist.py
tests/: conftest.py  rbm_sampler_assertions.py  sampler_assertions.py  test_rbm_model_base.py  test_rbm_model_brbm.py  test_rbm_model_cbrbm.py  test_rbm_sampler_base.py  test_rbm_sampler_cd.py  test_rbm_sampler_pcd.py
tests/fixtures/: __init__.py  configs.py  datasets.py  mocks.py  models.py
tests/helper/: __init__.py  perf.py  rbm.py  sampler.py
tests/rbm/: test_base.py
tests/unit/core/: test_config.py  test_device.py  test_logging.py
tests/unit/inference/: test_partition.py
tests/unit/models/: test_base.py
tests/unit/models/rbm/: test_bernoulli.py  test_gaussian.py  test_rbm_base.py
tests/unit/sampling/: test_base.py  test_deterministic.py  test_gradient.py  test_mcmc.py
tests/unit/training/: test_callbacks.py  test_metrics.py  test_trainer.py
tests/unit/utils/: test_data.py  test_initialization.py  test_tensor.py  test_visualization.py
