[tool.poetry]
name = "ebm"
version = "0.1.0"
description = ""
authors = ["Ayan Das <bvits@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
numpy  = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0"
pytest-timeout = "^2.3.1"
hypothesis = "^6.54.5"
ruff = "^0.9.3"
mypy = "^1.13.0"
pre-commit = "^3.5.0"

[tool.pytest.ini_options]
minversion = "7.0"
console_output_style = "progress"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Better output
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov-context=test",
    "--no-cov-on-fail",
    "--failed-first",
    "--new-first",
    "-v",
]

# Test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast (select with '-m \"fast\"')",
    "statistical: marks tests as statistical tests that require many iterations",
    "performance: marks tests as performance tests",
    "gpu: marks tests that require GPU",
]

# Timeout handling
timeout = 300
timeout_method = "thread"

[tool.coverage.run]
source = ["ebm"]
context = "test"

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]
ignore = ["E203", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "ANN"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_return_any = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
